--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "brutusin-json-forms": "git+https://github.com/brutusin/json-forms.git",
     "file-loader": "^0.9.0",
+    "highlight.js": "^9.6.0",
     "jsplumb": "^2.1.4",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
