--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "file-loader": "^0.9.0",
     "highlight.js": "^9.6.0",
     "jsplumb": "^2.1.4",
+    "mathjs": "^3.4.1",
+    "perfect-scrollbar": "^0.6.12",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
+    "vue-select": "github:sagalbot/vue-select",
     "vuex": "^0.8.2"
   }
 }
