--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "file-loader": "^0.9.0",
     "highlight.js": "^9.6.0",
     "jsep": "^0.3.0",
-    "jsplumb": "^2.1.4",
+    "jsplumb": "~2.1.4",
     "mathjs": "^3.4.1",
     "perfect-scrollbar": "^0.6.12",
+    "socket.io-client": "^1.5.1",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
     "vue-select": "github:sagalbot/vue-select",
