--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "brutusin-json-forms": "git+https://github.com/brutusin/json-forms.git",
     "file-loader": "^0.9.0",
     "highlight.js": "^9.6.0",
+    "html2canvas": "^0.5.0-beta4",
     "jsep": "^0.3.0",
     "jsplumb": "~2.1.4",
     "mathjs": "^3.4.1",
