--- a/package.json
+++ b/package.json
@@ -32,18 +32,21 @@
     "awesome-bootstrap-checkbox": "^0.3.7",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
-    "brutusin-json-forms": "git+https://github.com/brutusin/json-forms.git",
     "file-loader": "^0.9.0",
     "highlight.js": "^9.6.0",
     "html2canvas": "^0.5.0-beta4",
     "jsep": "^0.3.0",
     "jsplumb": "~2.1.4",
+    "lodash": "^4.17.4",
     "mathjs": "^3.4.1",
     "perfect-scrollbar": "^0.6.12",
     "socket.io-client": "^1.5.1",
-    "vue": "^1.0.26",
-    "vue-resource": "^0.9.3",
-    "vue-select": "github:sagalbot/vue-select",
-    "vuex": "^0.8.2"
+    "vue": "^2.1.10",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.1.0",
+    "vue-select": "github:sagalbot/vue-select#vue2",
+    "vue-server-renderer": "^2.1.10",
+    "vuex": "^2.1.0",
+    "vuex-router-sync": "^4.0.2"
   }
 }
