--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.13.2",
     "bootstrap-sass-loader": "^1.0.10",
     "css-loader": "^0.23.1",
@@ -26,6 +27,9 @@
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "vue-cli": "^2.8.1",
+    "vue-loader": "^10.2.0",
+    "vue-template-compiler": "^2.1.10",
     "webpack": "^1.13.1"
   },
   "dependencies": {
@@ -42,6 +46,7 @@
     "perfect-scrollbar": "^0.6.12",
     "socket.io-client": "^1.5.1",
     "vue": "^2.1.10",
+    "vue-moment": "^2.0.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.2.0",
     "vue-select": "github:sagalbot/vue-select#vue2",
