--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "jsplumb": "~2.1.4",
     "lodash": "^4.17.4",
     "mathjs": "^3.4.1",
+    "moment": "^2.17.1",
     "perfect-scrollbar": "^0.6.12",
     "socket.io-client": "^1.5.1",
     "vue": "^2.1.10",
     "vue-moment": "^2.0.2",
+    "vue-progressbar": "^0.7.1",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.2.0",
     "vue-select": "github:sagalbot/vue-select#vue2",
