--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "html2canvas": "^0.5.0-beta4",
     "jsep": "^0.3.0",
     "jsplumb": "~2.1.4",
+    "less": "^2.7.2",
     "lodash": "^4.17.4",
     "mathjs": "^3.4.1",
     "moment": "^2.17.1",
     "perfect-scrollbar": "^0.6.12",
+    "resumablejs": "^1.0.2",
     "socket.io-client": "^1.5.1",
     "vue": "^2.1.10",
     "vue-moment": "^2.0.2",
