--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "@websanova/vue-auth": "^2.10.0-beta",
     "awesome-bootstrap-checkbox": "^0.3.7",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
@@ -51,6 +52,7 @@
     "resumablejs": "^1.0.2",
     "socket.io-client": "^1.5.1",
     "vue": "^2.1.10",
+    "vue-context-menu": "^2.0.2",
     "vue-moment": "^2.0.2",
     "vue-progressbar": "^0.7.1",
     "vue-resource": "^1.0.3",
