--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "live-server": "^1.0.0",
     "node-sass": "^3.8.0",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^4.1.1",
     "script-loader": "^0.7.0",
     "scss-loader": "0.0.1",
     "style-loader": "^0.13.1",
@@ -52,15 +52,18 @@
     "moment": "^2.17.1",
     "perfect-scrollbar": "^0.6.12",
     "resumablejs": "^1.0.2",
+    "scss-loader": "0.0.1",
     "socket.io-client": "^1.5.1",
     "vue": "^2.1.10",
     "vue-context-menu": "^2.0.2",
+    "vue-i18n": "^7.0.3",
     "vue-moment": "^2.0.2",
     "vue-progressbar": "^0.7.1",
     "vue-resource": "^1.3.3",
     "vue-router": "^2.2.0",
     "vue-select": "github:sagalbot/vue-select#vue2",
     "vue-server-renderer": "^2.1.10",
+    "vue-switches": "^1.1.7",
     "vue-toastr": "^2.0.5",
     "vuex": "^2.1.0",
     "vuex-router-sync": "^4.0.2"
