--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "awesome-bootstrap-checkbox": "^0.3.7",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
+    "d3": "^3.5.17",
     "file-loader": "^0.9.0",
     "highlight.js": "^9.6.0",
     "html2canvas": "^0.5.0-beta4",
@@ -50,6 +51,7 @@
     "lodash": "^4.17.4",
     "mathjs": "^3.4.1",
     "moment": "^2.17.1",
+    "nvd3": "^1.8.5",
     "perfect-scrollbar": "^0.6.12",
     "resumablejs": "^1.0.2",
     "scss-loader": "0.0.1",
