--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url-loader": "^0.5.7",
     "vue-cli": "^2.8.1",
     "vue-loader": "^10.2.0",
+    "vue-resize-handle": "^1.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^1.13.1"
   },
@@ -46,13 +47,14 @@
     "highlight.js": "^9.6.0",
     "html2canvas": "^0.5.0-beta4",
     "jsep": "^0.3.0",
-    "jsplumb": "~2.1.4",
+    "jsplumb": "~2.5.7",
     "less": "^2.7.2",
     "lodash": "^4.17.4",
     "mathjs": "^3.4.1",
     "moment": "^2.17.1",
     "nvd3": "^1.8.5",
     "perfect-scrollbar": "^0.6.12",
+    "prismjs": "^1.8.1",
     "resumablejs": "^1.0.2",
     "scss-loader": "0.0.1",
     "socket.io-client": "^1.5.1",
